# audiostat

./: .gitignore  README.md  main.py  pyproject.toml
songtracker/: __init__.py  songtracker.py
src/: audiostat.py
